tester/testsuite/bad/bad003.jl
int f(int x, int x) {
   return x;
}

int main() {
   return 1;
}
